fixed background image not showing on desktop p2

--- a/index.css
+++ b/index.css
@@ -425,12 +425,6 @@ hr {
         text-align: center;
     }
 
-    #home {
-        min-height: 100%;
-        background-image: url("./assets/backgroundsmall.jpg");
-        background-attachment: initial;
-    }
-
     .homecontainer {
         height: 100vh;
         display: flex;
